--- a/art/index.html
+++ b/art/index.html
@@ -13,7 +13,23 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>dnfeow</h1> <i class="bi bi-bell"></i>
+    <!-- HEADER -->
+    <div class="container-fluid">
+        <header class="row" id="header">
+            <div id="logo-container">
+                <img src="img/art_logo.svg" alt="Art" id="logo">
+            </div>
+            <p>Exibições de arte urbana</p>
+        </header>
+        <nav id="navbar" class="container">
+            <div class="row justify-content-center">
+                <a href="#">Home</a>
+                <a href="#">Projetos</a>
+                <a href="#">Artistas</a>
+                <a href="#">Contatos</a>
+            </div>
+        </nav>
+    </div>
     
 </body>
 </html>
