--- a/art/index.html
+++ b/art/index.html
@@ -30,6 +30,17 @@
             </div>
         </nav>
     </div>
+    <!-- BANNER -->
+    <div class="container" id="main-image-container">
+        <!-- classe bootstrap center-image serve centralizar imagem  -->
+        <div class="main-image image-center">
+            <div class="main-image-info">
+                <h2>Arte no muro de Davi</h2>
+                <p class=".cor-secundaria">Realizada em 10/03/2023</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
