--- a/art/index.html
+++ b/art/index.html
@@ -41,6 +41,44 @@
             </div>
         </div>
     </div>
+    <!-- GALLERY -->
+    <div class="container" id="gallery-container">
+        <div class="col-12">
+            <h1>Artes em destaque</h1>
+        </div>
+        <div class="row gx-5">
+            <div class="col-12 col-md-6">
+                <div class="small-image-container image-center" id="img2"></div>
+                <h3>Obra de Arthur</h3>
+                <p class="cor-secundaria">Realizada em 10/03/2023</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container image-center" id="img3"></div>
+                <h3>Grafite Av. Paulista</h3>
+                <p class="cor-secundaria">Realizada em 10/03/2023</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container image-center" id="img4"></div>
+                <h3>Arte em conjunto do Metrô</h3>
+                <p class="cor-secundaria">Realizada em 10/03/2023</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container image-center" id="img5"></div>
+                <h3>Obra de Paulo</h3>
+                <p class="cor-secundaria">Realizada em 10/03/2023</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="small-image-container image-center" id="img2"></div>
+                <h3>Grafite do centro da cidade</h3>
+                <p class="cor-secundaria">Realizada em 10/03/2023</p>
+                <a href="#" class="btn">Detalhes</a>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
