Finalizando Footer e o projeto

--- a/art/index.html
+++ b/art/index.html
@@ -47,6 +47,8 @@
             <h1>Artes em destaque</h1>
         </div>
         <div class="row gx-5">
+            <!-- No exemplo da classe "col-12 col-md-6", a coluna é definida como ocupando 12 
+                colunas em telas pequenas e 6 colunas em telas médias e maiores. -->
             <div class="col-12 col-md-6">
                 <div class="small-image-container image-center" id="img2"></div>
                 <h3>Obra de Arthur</h3>
@@ -79,6 +81,28 @@
             </div>
         </div>
     </div>
+    <!-- FOOTER -->
+    <footer class="container">
+        <p class="cor-secundaria">Nos encontre nas redes sociais</p>
+        <div class="row justify-content-center" id="social-icons-container">
+            <div class="col-1">
+                <a href="#">
+                    <i class="bi bi-facebook cor-secundaria"></i>
+                </a>
+            </div>
+            <div class="col-1">
+                <a href="#">
+                    <i class="bi bi-twitter cor-secundaria"></i>
+                </a>
+            </div>
+            <div class="col-1">
+                <a href="#">
+                    <i class="bi bi-instagram cor-secundaria"></i>
+                </a>
+            </div>
+        </div>
+        <p class="cor-secundaria">Art &copy; 2023</p>
+    </footer>
     
 </body>
 </html>
